# Backend service configuration
[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid"] }
